# fastapi_zero

./: Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: pipiline.yaml
fastapi_zero/: app.py  database.py  models.py  schemas.py  security.py  settings.py
fastapi_zero/routers/: auth.py  todos.py  users.py
migrations/: env.py
migrations/versions/: 1cd456780b9c_adicionando_created_at_na_tabela_todos.py  39a493802ed0_create_updated_at_in_users_table.py  9c7f8f4dbd7c_adicionando_updated_at_na_tabela_todos.py  c877e42fb33e_create_users_table.py  dd1f091a0741_create_todos_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
